# pyFFS

./: .gitignore  .readthedocs.yaml  LICENSE.txt  README.md  README.rst  codestyle.toml  format_code.sh  requirements.txt  setup.cfg  setup.py  test.py
doc/: conf.py  index.rst
doc/api/: index.rst  pyffs.conv.rst  pyffs.czt.rst  pyffs.ffs.rst  pyffs.func.rst  pyffs.interp.rst  pyffs.interpolation.rst  pyffs.rst  pyffs.util.rst  pyffs.utils.rst
doc/general/: index.rst  install.rst
doc/notes/: CZT.rst  FS_eval_for_BL_signals.rst  func_interpolation_BL_signals.rst  index.rst
doc/theory/: DFT.rst  index.rst
examples/: convolve_1d.py  convolve_2d.py  ffs_1d.py  ffs_2d.py  interp_1d.py  interp_2d.py  util.py
joss_paper/: README.md  paper.bib  paper.md
profile/: bandlimited_interp1d.py  bandlimited_interp1d_vary_M.py  bandlimited_interp1d_vary_width.py  bandlimited_interp2d.py  bandlimited_interp2d_vary_M.py  bandlimited_interp2d_vary_width.py  convolve2d.py  ffs.py  ffs_vs_fft_interp1d.py  ffs_vs_fft_interp2d.py  ffsn.py  fs_interp.py  fs_interp1d_vary_M.py  fs_interp1d_vary_NFS.py  fs_interp2.py  fs_interp2d_vary_M.py  fs_interp2d_vary_NFS.py  util.py
pyffs/: __init__.py  _util.py  backend.py  conv.py  czt.py  ffs.py  func.py  interp.py  interpolation.py  util.py  utils.py
test/: test_czt.py  test_ffs.py  test_interp.py  test_util.py
tests/: test_czt.py  test_ffs.py  test_interp.py  test_util.py
