# #############################################################################
# setup.cfg
# =========
# Author : Sepand KASHANI [kashani.sepand@gmail.com]
# #############################################################################

[metadata]
name = pyFFS
summary = Fast Fourier Series library
long_description = file:README.rst
long_description_content_type = text/x-rst; charset=UTF-8
author = Sepand KASHANI, Matthieu SIMEONI, Paul HURLEY
author_email = kashani.sepand@gmail.com
url = https://github.com/imagingofthings/pyFFS
download_url = https://github.com/imagingofthings/pyFFS
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering
license = BSD

[files]
packages =
    pyffs

[options]
include_package_data = True
python_requires = >=3.6
zip_safe = True

[build_sphinx]
build-dir = build
source-dir = doc
builder = html
warning-is-error = True
