# #############################################################################
# setup.cfg
# =========
# Authors :
# Sepand KASHANI [kashani.sepand@gmail.com]
# Eric Bezzam [ebezzam@gmail.com]
# #############################################################################

[metadata]
name = pyFFS
summary = Fast Fourier Series library
long_description = file:README.rst
long_description_content_type = text/x-rst; charset=UTF-8
author = Sepand KASHANI, Eric BEZZAM, Matthieu SIMEONI
author_email = kashani.sepand@gmail.com
url = https://github.com/imagingofthings/pyFFS
download_url = https://github.com/imagingofthings/pyFFS
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering
license = BSD


[build_sphinx]
build-dir = build
source-dir = doc
builder = html
warning-is-error = True


[files]
packages =
    pyffs


[options]
zip_safe = True
include_package_data = True
python_requires = >=3.6
install_requires =
    numpy >= 1.10
    scipy >= 1.5.0


[options.extras_require]
dev =
    sphinx == 2.1.*
    sphinx_rtd_theme == 0.4.*
    pytest >= 6.*
    click >= 7.*
cuda110 = cupy-cuda110 >= 8.6
